appId: com.anonymous.sadamobile
---
- runFlow: login.yaml
- assertVisible: "Live Rooms"
- tapOn: "Profile"
- extendedWaitUntil:
    visible: "Followers"
    timeout: 15000
- assertVisible: "Followers"
- assertVisible: "Following"
- assertVisible: "Gems 💎"
- assertVisible: "Sign Out"
